crates/bsql/tests/compile_fail_features/missing_decimal.stderr
error[E0425]: cannot find function `decode_numeric_decimal` in module `::bsql_core::driver`
 --> tests/compile_fail_features/missing_decimal.rs:5:13
  |
5 |     let _ = bsql::query!("SELECT id, budget FROM tickets WHERE id = $id: i32");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `::bsql_core::driver`
  |
note: found an item that was configured out
 --> $WORKSPACE/crates/bsql-core/src/lib.rs
  |
  |     #[cfg(feature = "decimal")]
  |           ------------------- the item is gated behind the `decimal` feature
  |     pub use bsql_driver_postgres::codec::decode_numeric_decimal;
  |                                          ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
